Add product comparing state

--- a/src/app/customize/cms/product-comparing/add-to-comparing/add-to-comparing.component.html
+++ b/src/app/customize/cms/product-comparing/add-to-comparing/add-to-comparing.component.html
@@ -1,9 +1,8 @@
-
 <button
   class="btn btn-primary btn-block"
   type="button"
-  [disabled]="isAdded"
+  [disabled]="(isPresentInComparing$ | async)"
   (click)="addToComparing()"
 >
-  Add to compare
+  Compare
 </button>
