--- a/src/app/customize/cms/product-comparing/header-comparing-icon/header-comparing-icon.component.html
+++ b/src/app/customize/cms/product-comparing/header-comparing-icon/header-comparing-icon.component.html
@@ -1,11 +1,11 @@
-<div class="product-comparing-component" >
+<div class="product-comparing-component" (click)="closeMenu()" (mouseenter)="isMenuVisible = true">
   <a class="product-comparing-link" [routerLink]="comparingCategoriesUrl">
     <span *ngIf="(comparingProductsAmount$ | async) > 0"
           class="comparing-product-count">{{comparingProductsAmount$ | async}}</span>
     <cx-icon [type]="iconTypes.COMPARING"></cx-icon>
 
   </a>
-  <div #menuDiv class="header-popup-comparison-b " *ngIf="(comparingProductsAmount$ | async) > 0">
+  <div #menuDiv class="header-popup-comparison-b " *ngIf="isMenuVisible && (comparingProductsAmount$ | async) > 0">
     <div class="menu-wrapper">
       <ul class="header-popup header-popup-comparison-full">
         <li *ngFor="let node of categories$ | async" class="header-popup-comparison-full-i">
