Add product comparing categories page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,2 +1,3 @@
 @import 'customize/cms/product-comparing/add-to-comparing/add-to-comparing.component';
 @import 'customize/cms/product-comparing/header-comparing-icon/header-comparing-icon.component';
+@import 'customize/cms/product-comparing/comparing-categories/comparing-categories.component';
