--- a/src/app/customize/cms/product-comparing/comparing-categories/comparing-categories.component.html
+++ b/src/app/customize/cms/product-comparing/comparing-categories/comparing-categories.component.html
@@ -1,1 +1,53 @@
-<div>Todo comparing categories page</div>
+<div *ngIf="(categories$ | async) as categories; else loading">
+
+  <h3 *ngIf="categories.length > 0" class="page-title">{{ 'comparingCategoriesPage.pageTitle' | cxTranslate }}</h3>
+  <h3 *ngIf="categories.length === 0" class="page-title align-message">{{'comparingCategoriesPage.emptyComparingList' | cxTranslate }}</h3>
+
+  <div class="category-row" *ngFor="let category of categories">
+    <h3 class="category-comparing-title">{{ category.categoryTitle }}</h3>
+    <div class="c-products-row clearfix">
+      <div class="c-product" *ngFor="let comparingProduct of category.comparingProducts">
+        <a href="javascript:;" class="c-product-section-remove" (click)="removeProductFromComparing(comparingProduct)">
+          <i class="fa fa-times" aria-hidden="true"></i>
+        </a>
+        <div class="c-product-image">
+          <a [routerLink]="{ cxRoute: 'product', params: comparingProduct } | cxUrl">
+            <img *ngIf="comparingProduct.images" src="{{comparingProduct.images?.PRIMARY.thumbnail.url}}"
+                 alt="{{comparingProduct.images?.PRIMARY.thumbnail.altText}}"
+                 title="{{comparingProduct.images?.PRIMARY.thumbnail.altText}}" style="border:none"/>
+          </a>
+        </div>
+        <div class="c-product-info" [class.available]="comparingProduct.availableForPickup">
+          <div class="c-product-info-title">
+            {{ comparingProduct.summary }}
+          </div>
+          <div class="c-product-status-wrap">
+            <div class="c-product-status available" *ngIf="comparingProduct.stock.stockLevelStatus === 'inStock'">
+              {{ 'comparingCategoriesPage.inStock' | cxTranslate }}
+            </div>
+            <div class="c-product-status unavailable" *ngIf="comparingProduct.stock.stockLevelStatus === 'outOfStock'">
+              {{ 'comparingCategoriesPage.inStock' | cxTranslate }}
+            </div>
+          </div>
+          <div class="c-product-price">
+            <div class="g-price-uah">
+              {{comparingProduct.price.formattedValue }}
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="c-category-link-row">
+      <cx-generic-link [url]="category.url">
+        {{ 'comparingCategoriesPage.comparingProductsLink' | cxTranslate }} {{ category.categoryTitle }}
+      </cx-generic-link>
+    </div>
+  </div>
+</div>
+
+<ng-template #loading>
+  <span class="align-message">Loading page... </span>
+</ng-template>
+
+
+
