Add product comparing page

--- a/src/app/customize/cms/product-comparing/product-comparing/product-comparing.component.html
+++ b/src/app/customize/cms/product-comparing/product-comparing/product-comparing.component.html
@@ -1,1 +1,2 @@
 <div>Todo product comparing page</div>
+<div *ngIf="(comparingCategory$ | async) as comparingCategory">{{comparingCategory.categoryCode}}</div>
