Add product comparing page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,12 @@
 @import 'customize/cms/product-comparing/add-to-comparing/add-to-comparing.component';
 @import 'customize/cms/product-comparing/header-comparing-icon/header-comparing-icon.component';
 @import 'customize/cms/product-comparing/comparing-categories/comparing-categories.component';
+@import 'customize/cms/product-comparing/product-comparing/product-comparing.component';
+
+
+cx-breadcrumb {
+  text-align: left;
+  max-width: 1140px;
+  margin: auto;
+
+}
