--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,1 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<cx-storefront>Loading...</cx-storefront>
+<cx-storefront></cx-storefront>
